--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ijstech/wallet",
+    "name": "@ijstech/eth-wallet",
     "version": "0.1.0",
     "devDependencies": {
         "@types/mocha": "*",
@@ -8,9 +8,14 @@
         "ts-node": "10.1.0",
         "typescript": "^4.2.4"
     },
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
     "dependencies": {
+        "asn1.js": "2.1.1",
         "aws-sdk": "^2.944.0",
         "bignumber.js": "9.0.1",
+        "bn.js": "5.2.0",
+        "ethereumjs-tx": "2.1.2",
         "web3": "1.4.0"
     },
     "scripts": {
