--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "@ijstech/eth-wallet",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "devDependencies": {
         "@types/mocha": "*",
         "@types/node": "14.17",
-        "mocha": "*",
+        "mocha": "^9.1.2",
         "ts-node": "10.1.0",
         "typescript": "^4.2.4"
     },
@@ -18,7 +18,8 @@
         "ethereumjs-tx": "2.1.2",
         "ethereumjs-util": "7.0.7",
         "js-sha3": "0.8.0",
-        "web3": "1.5.2"
+        "web3": "1.6.0",
+        "web3-eth": "1.6.0"
     },
     "scripts": {
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin",
