--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
     "name": "@ijstech/eth-wallet",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "devDependencies": {
-        "@types/mocha": "*",
+        "@types/mocha": "9.0.0",
         "@types/node": "14.17",
-        "mocha": "^9.1.2",
+        "mocha": "9.1.2",
         "ts-node": "10.1.0",
-        "typescript": "^4.2.4"
+        "typescript": "4.2.4"
     },
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "dependencies": {
         "asn1.js": "5.4.1",
-        "aws-sdk": "^2.944.0",
+        "aws-sdk": "2.944.0",
         "bignumber.js": "9.0.1",
         "bn.js": "5.2.0",
         "ethereumjs-tx": "2.1.2",
         "ethereumjs-util": "7.0.7",
-        "js-sha3": "0.8.0",
         "web3": "1.6.0",
         "web3-eth": "1.6.0"
     },
