--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
     "name": "@ijstech/eth-wallet",
     "version": "0.1.5",
-    "devDependencies": {
-        "@types/mocha": "9.0.0",
-        "@types/node": "14.17",
-        "mocha": "9.1.2",
-        "ts-node": "10.1.0",
-        "typescript": "4.2.4"
-    },
-    "main": "lib/index.js",
+    "main": "lib/index.js",    
     "bin": {
         "eth-wallet-build": "tools/compile.js",
         "eth-wallet-build-2": "tools/compileV2.js"
     },
-    "types": "lib/index.d.ts",
+    "types": "types/index.d.ts",
     "dependencies": {
         "asn1.js": "5.4.1",
         "aws-sdk": "2.944.0",
@@ -24,9 +17,18 @@
         "web3": "1.6.0",
         "web3-eth": "1.6.0"
     },
+    "devDependencies": {
+        "@types/mocha": "9.0.0",
+        "@types/node": "14.17",
+        "esbuild": "0.13.13",
+        "ganache-cli": "6.12.2",
+        "mocha": "9.1.2",
+        "ts-node": "10.1.0",
+        "typescript": "4.2.4"
+    },
     "scripts": {
-        "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin",
+        "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.ts",
-        "postinstall": "mkdir tools/solcjs"
+        "postinstall": "mkdir -p tools/solcjs"
     }
 }
