--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
         "bn.js": "5.2.0",
         "ethereumjs-tx": "2.1.2",
         "ethereumjs-util": "7.0.7",
-        "web3": "1.7.0",
-        "web3-eth": "1.7.0",
-        "web3-utils": "1.7.0"
+        "web3": "1.7.1"
     },
     "devDependencies": {
         "@types/mocha": "9.0.0",
