--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 { 
     "compilerOptions": {
+        "baseUrl": ".",
         "target": "es2017",
         "allowJs": true,
         "module": "commonjs",        
+        "moduleResolution": "node",   
         "esModuleInterop": true,
         "outDir": "lib",                      
         "removeComments": true,         
