--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "esbuild": "0.13.13",
         "ganache-cli": "6.12.2",
         "mocha": "9.1.2",
+        "solc": "0.8.6",
         "ts-node": "10.1.0",
         "typescript": "4.2.4"
     },
     "scripts": {
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
+        "test:buildContracts": "node tools/compileV2.js 0.8.6 999999 test/contracts test/bin test/src/contracts",
         "postinstall": "mkdir -p tools/solcjs"
     }
 }
