--- a/package.json
+++ b/package.json
@@ -13,22 +13,21 @@
         "bn.js": "5.2.0",
         "ethereumjs-tx": "2.1.2",
         "ethereumjs-util": "7.0.7",
-        "web3": "1.7.1"
+        "web3": "1.7.3"
     },
     "devDependencies": {
-        "@types/mocha": "9.0.0",
+        "@types/mocha": "9.1.1",
         "@types/node": "14.17",
         "esbuild": "0.13.13",
-        "ganache-cli": "6.12.2",
-        "mocha": "9.1.2",
+        "ganache": "7.2.0",
+        "mocha": "10.0.0",
         "solc": "0.8.6",
         "ts-node": "10.1.0",
         "typescript": "4.2.4"
     },
     "scripts": {
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
-        "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
-        "test:buildContracts": "node tools/compileV2.js 0.8.6 999999 test/contracts test/bin test/src/contracts",
+        "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",        
         "postinstall": "mkdir -p tools/solcjs"
     }
 }
