--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
         "ganache": "7.2.0",
         "mocha": "10.0.0",
         "ts-node": "10.1.0",
-        "typescript": "4.2.4"
+        "typescript": "4.2.4",
+        "merkletreejs": "0.2.32",
+        "js-sha3": "0.8.0",
+        "buffer": "6.0.3"
     },
     "scripts": {
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
