--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "ethereumjs-tx": "2.1.2",
         "ethereumjs-util": "7.0.7",
         "solc": "0.8.6",
-        "web3": "1.7.3"
+        "web3": "1.7.3",
+        "ethereum-cryptography": "1.1.2"
     },
     "devDependencies": {
         "@types/mocha": "9.1.1",
@@ -30,6 +31,7 @@
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
         "build:test-contracts": "ts-node tools/compile.ts ./test-contracts.json",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
+        "test:signTypedData": "mocha --ui tdd --exit --require ts-node/register test/signTypedData.spec.ts",
         "postinstall": "mkdir -p tools/solcjs"
     }
 }
