--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
         "ganache": "7.2.0",
         "mocha": "10.0.0",
         "ts-node": "10.1.0",
-        "typescript": "4.2.4"
+        "typescript": "4.2.4",
+        "@openzeppelin/contracts": "4.7.3"
     },
     "scripts": {
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
-        "build:test-contracts": "ts-node tools/compile.ts ./test-contracts.json",
+        "build:test-contracts": "ts-node tools/compile.ts ./test-contracts.json && sh ./scripts/replaceTestContracts.sh",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
         "test:signTypedData": "mocha --ui tdd --exit --require ts-node/register test/signTypedData.spec.ts",
         "postinstall": "mkdir -p tools/solcjs"
