--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "scripts": {
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
         "build:tools": "cd tools && rm -rf bin && tsc && cd ..",
-        "build:test": "rm -f test/contracts/*.ts && node tools/bin/compile.js test/contracts.json",
+        "build:test": "rm -f test/contracts/*.ts && node tools/bin/compile.js test/test-contracts.json && sh ./scripts/replaceTestContracts.sh",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
         "test:signTypedData": "mocha --ui tdd --exit --require ts-node/register test/signTypedData.spec.ts"
     }
