--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
         "aws-sdk": "2.944.0",
         "bignumber.js": "9.0.1",
         "bn.js": "5.2.0",
+        "ethereum-cryptography": "1.1.2",
         "ethereumjs-tx": "2.1.2",
         "ethereumjs-util": "7.0.7",
         "solc": "0.8.6",
-        "web3": "1.8.0",
-        "ethereum-cryptography": "1.1.2"
+        "web3": "1.8.0"
     },
     "devDependencies": {
+        "@ijstech/eth-contract": "^0.1.3",
+        "@openzeppelin/contracts": "4.7.3",
         "@types/mocha": "9.1.1",
         "@types/node": "14.17",
         "esbuild": "0.13.13",
         "ganache": "7.2.0",
         "mocha": "10.0.0",
         "ts-node": "10.1.0",
-        "typescript": "4.2.4",
-        "@openzeppelin/contracts": "4.7.3"
+        "typescript": "4.2.4"
     },
     "scripts": {
         "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
         "build:tools": "cd tools && rm -rf bin && tsc && cd ..",
-        "build:test": "rm -f test/contracts/*.ts && node tools/bin/compile.js test/test-contracts.json && sh ./scripts/replaceTestContracts.sh",
+        "build:test": "rm -f test/contracts/*.ts && sol2ts test/test-contracts.json",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
         "test:signTypedData": "mocha --ui tdd --exit --require ts-node/register test/signTypedData.spec.ts"
     }
