--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "build:tools": "cd tools && rm -rf bin && tsc && cd ..",
         "build:test": "rm -f test/contracts/*.ts && sol2ts test/test-contracts.json",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
+        "test:wallet": "mocha --ui tdd --exit --require ts-node/register test/wallet.spec.ts",
         "test:signTypedData": "mocha --ui tdd --exit --require ts-node/register test/signTypedData.spec.ts"
     }
 }
