--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "@ijstech/eth-wallet",
-    "version": "0.1.16",
+    "version": "0.1.17",
     "license": "AGPL-3.0",
     "main": "lib/index.js",
     "bin": {
         "sol2ts": "tools/bin/compile.js"
     },
     "types": "types/index.d.ts",
+    "pluginTypes": "pluginTypes/index.d.ts",
     "dependencies": {
         "asn1.js": "5.4.1",
         "aws-sdk": "2.944.0",
@@ -30,7 +31,8 @@
         "typescript": "4.2.4"
     },
     "scripts": {
-        "build": "tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
+        "build": "rm -rf lib && rm -rf types && rm -rf pluginTypes && rm -rf dist && npm run build:types && tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
+        "build:types": "tsc --P tsconfig.pluginTypes.json",
         "build:tools": "cd tools && rm -rf bin && tsc && cd ..",
         "build:test": "rm -f test/contracts/*.ts && sol2ts test/test-contracts.json",
         "test": "mocha --ui tdd --exit --require ts-node/register test/*.spec.ts",
