--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
         "ethereum-cryptography": "1.1.2",
         "solc": "0.8.6",
         "web3-eth": "1.9.0",
-        "web3-utils": "1.9.0"
+        "web3-utils": "1.9.0",
+        "@ijstech/eth-contract": "^0.1.5"
     },
     "devDependencies": {
-        "@ijstech/eth-contract": "^0.1.5",
         "@openzeppelin/contracts": "4.8.2",
         "@types/mocha": "9.1.1",
         "@types/node": "18.15",
