--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@ijstech/eth-wallet",
-    "version": "0.1.99",
-    "license": "AGPL-3.0",
+    "version": "0.1.100",
+    "license": "BUSL-1.1",
     "main": "lib/index.js",
     "bin": {
         "sol2ts": "tools/bin/compile.js"
