--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
         "@openzeppelin/contracts": "4.9.6",
         "@types/mocha": "9.1.1",
         "@types/node": "18.15",
-        "esbuild": "0.13.13",
-        "ganache": "7.2.0",
-        "mocha": "10.0.0",
+        "esbuild": "^0.25.2",
+        "hardhat": "^2.23.0",
+        "mocha": "^10.8.2",
         "ts-node": "10.1.0",
         "typescript": "5.0.4",
         "web3": "4.0.3"
