--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ijstech/eth-wallet",
-    "version": "0.1.107",
+    "version": "0.1.108",
     "license": "BUSL-1.1",
     "main": "lib/index.js",
     "bin": {
@@ -19,9 +19,9 @@
         "@openzeppelin/contracts": "4.9.6",
         "@types/mocha": "9.1.1",
         "@types/node": "18.15",
-        "esbuild": "^0.25.2",
-        "hardhat": "^2.23.0",
-        "mocha": "^10.8.2",
+        "esbuild": "0.13.13",
+        "hardhat": "2.23.0",
+        "mocha": "10.8.2",
         "ts-node": "10.1.0",
         "typescript": "5.0.4",
         "web3": "4.0.3"
