--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "bignumber.js": "9.1.1",
         "ethereum-cryptography": "1.1.2",
         "web3-eth": "1.9.0",
-        "web3-utils": "1.9.0"
+        "web3-utils": "1.9.0",
+        "ethers": "6.14.1"
     },
     "devDependencies": {
         "@ijstech/eth-contract": "^0.1.5",
@@ -24,7 +25,8 @@
         "mocha": "10.8.2",
         "ts-node": "10.1.0",
         "typescript": "5.0.4",
-        "web3": "4.0.3"
+        "web3": "4.0.3",
+        "solc": "0.8.28"
     },
     "scripts": {
         "build": "rm -rf lib && rm -rf types && rm -rf dist && npm run build:pluginTypes && tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
