--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ijstech/eth-wallet",
-    "version": "0.1.108",
+    "version": "0.1.109",
     "license": "BUSL-1.1",
     "main": "lib/index.js",
     "bin": {
@@ -12,8 +12,7 @@
         "bignumber.js": "9.1.1",
         "ethereum-cryptography": "1.1.2",
         "web3-eth": "1.9.0",
-        "web3-utils": "1.9.0",
-        "ethers": "6.14.1"
+        "web3-utils": "1.9.0"
     },
     "devDependencies": {
         "@ijstech/eth-contract": "^0.1.5",
@@ -21,12 +20,13 @@
         "@types/mocha": "9.1.1",
         "@types/node": "18.15",
         "esbuild": "0.13.13",
+        "ethers": "6.14.1",
         "hardhat": "2.23.0",
         "mocha": "10.8.2",
+        "solc": "0.8.28",
         "ts-node": "10.1.0",
         "typescript": "5.0.4",
-        "web3": "4.0.3",
-        "solc": "0.8.28"
+        "web3": "4.0.3"
     },
     "scripts": {
         "build": "rm -rf lib && rm -rf types && rm -rf dist && npm run build:pluginTypes && tsc && cp -r ./src/contracts/bin ./lib/contracts/bin && node esbuild.bundle.js",
