--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "bignumber.js": "9.1.1",
         "ethereum-cryptography": "1.1.2",
         "web3-eth": "1.9.0",
-        "web3-utils": "1.9.0"
+        "web3-utils": "1.9.0",
+        "ethers": "6.14.1"
     },
     "devDependencies": {
         "@ijstech/eth-contract": "^0.1.5",
@@ -20,7 +21,6 @@
         "@types/mocha": "9.1.1",
         "@types/node": "18.15",
         "esbuild": "0.13.13",
-        "ethers": "6.14.1",
         "hardhat": "2.23.0",
         "mocha": "10.8.2",
         "solc": "0.8.28",
